get all order routes working properly and connected to yaml
